[package]
name = "intear-launch"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/INTEARnear/launch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = { version = "5.24", features = ["global-contracts"] }
near-contract-standards = "5.24"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
